...

/* Navigation bar title of the 'add media' sheet */
"addMedia.navBar.title" = "Add Media";

/* The title of the add to lists view, which lets the user select a list to add a media object to. */
...

/* Button of an alert to confirm adding a new tag */
"detail.alert.newTag.button.add" = "Add";

/* Text of an alert for adding a new tag */
...

/* Rename button to confirm renaming a tag */
"detail.alert.renameTag.button.rename" = "Rename";

/* Message of the tag renaming alert */
...

/* The button label in the detail of a media object that leads to the cast information. */
"detail.basicInfo.cast" = "Cast";

/* The section header for the basic information section in the detail view */
...

/* The headline for the 'description' property in the detail view */
"detail.basicInfo.headline.description" = "Description";

/* The headline for the 'first aired' property in the detail view */
...

/* The headline for the 'seasons' property in the detail view */
"detail.basicInfo.headline.seasons" = "Seasons";

/* The headline for the 'show type' property in the detail view */
...

/* The navigation bar title for the notes in the detail view */
"detail.notes.navBar.title" = "Notes";

/* The navigation bar title for the seasons info in the detail view */
...

/* The navigation bar title for the tags in the detail view */
"detail.tags.navBar.title" = "Tags";

/* The section header for the user data section in the detail view */
...

/* The headline for the 'personal rating' property in the detail view */
"detail.userData.headline.personalRating" = "Personal Rating";

/* The headline for the 'tags' property in the detail view */
...
"detail.userData.headline.watchAgain" = "Watch again?";

"detail.userData.headline.watchAgain.show" = "Watch again / continue?";

/* The headline for the 'watched' property in the detail view */
"detail.userData.headline.watched" = "Watched?";

/* Label in the detail view of a media object that describes the absence of any user-provided notes. */
...

/* The picker value of the detail view's user data section which the user chooses if they did not watch the media object */
"detail.userData.watched.picker.notWatched" = "No";

/* The picker value of the detail view's user data section which the user chooses if they watched the media object partially */
...

/* The label in the detail view describing that it is unknown whether the user has watched the show */
"detail.userData.watchedShow.label.unknown" = "Unknown";

/* A type of watch provider (flatrate, ads, buy) */
...

/* A string describing a type of media */
"global.strings.movie" = "Movie";

/* A string describing a type of media */
...

/* Button label for the apply button in the filter view */
"library.filter.button.apply" = "Apply";

/* Button label for the reset button in the filter view */
...

/* The label for the delete swipe action in the library list */
"library.list.swipe.delete" = "Delete";

/* The label for the reload swipe action in the library list */
...

/* The label of the filter button in the navigation bar's menu */
"library.navBar.button.filter" = "Filter";

/* Heading for the sorting direction picker in the library menu */
...

/* The label for menu button that shows a menu, prompting the user to choose a type of list to create */
"lists.label.newList" = "New...";

/* The label for the 'remove' swipe action, removing a media object from a list */
...

/* The label of the library tab of the main TabView */
"tabView.library.label" = "Library";

/* The label of the lists tab of the main TabView */
"tabView.lists.label" = "Lists";

/* The label of the lookup tab of the main TabView */
...

"lists.defaultListName.favorites" = "Favorites";
"lists.defaultListName.watchlist" = "Watchlist";
"lists.defaultListName.problems" = "Problems";

...
"resolveProblems.detail.placeholder" = "Select a media";
"library.detailPlaceholder" = "Select a media";
"generic.editButtonDone" = "Done";
"generic.editButtonEdit" = "Edit";
"generic.dismissViewDone" = "Done";
"lists.detail.configure" = "Configure...";

"lists.alerts.newList.buttons.add" = "Add";
...
