...
        .onDisappear(perform: self.didDisappear)
    }
    
    func loadPlaceholderData() {
        // Load some movies from TMDB to fill the library
        let api = TMDBAPI(apiKey: JFLiterals.apiKey)
        let movies = ["John Wick 3", "The Matrix", "Brooklyn Nine Nine", "Inception", "World War Z", "Game of Thrones", "How to Get Away with Murder", "Scandal"]
        for movie in movies {
            api.searchMedia(movie) { (results: [TMDBSearchResult]?) in
                guard let results = results else {
                    print("Error getting results for '\(movie)'")
                    return
                }
...
